# Shmurho

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
CMake/Modules/: FindSUSA.cmake  FindShmurho.cmake  ShmurhoCommon.cmake  ShmurhoGitUtils.cmake  ShmurhoKVFile.cmake
CMake/Scripts/: README.md  fetch-git-repo.cmake  fetch-urho3d.cmake  load-kv-file.cmake  save-kv-file.cmake
Demo/: CMakeLists.txt
Demo/Somber/: CMakeLists.txt
Demo/Somber/src/Shmurho/Somber/: App.cpp  App.hpp  CatacombPhase.cpp  CatacombPhase.hpp  DevKbdController.cpp  DevKbdController.hpp  GameState.hpp  LoaderPhase.cpp  LoaderPhase.hpp  LocationPhase.cpp  MapLogic.cpp  ParcelLoader.cpp  ParcelLoader.hpp  PhaseBase.cpp  PhaseBase.hpp  PhaseSwitcher.hpp  StartMenuPhase.hpp  WorldMapPhase.cpp  WorldMapPhase.hpp
Docs/: CMakeLists.txt  Shmurho.doxygen
Docs/src/: GettingStarted.dox  GettingStarted.md  MainPage.md  OneMore.dox  Shmurho.dox  main.md
Docs/src/examples/: Partaker-01.hpp
ProjectTemplates/default/: CMakeLists.txt  LICENSE.md  README.md
ProjectTemplates/default/CMake/Modules/: .directory
ProjectTemplates/default/Prj/: .directory  CMakeLists.txt
ProjectTemplates/default/Prj/App/: .directory  CMakeLists.txt
ProjectTemplates/default/Prj/App/share/Prj/: .directory
ProjectTemplates/default/Prj/App/share/Prj/CoreData/: .directory
ProjectTemplates/default/Prj/App/share/Prj/Data/: .directory
ProjectTemplates/default/Prj/App/src/App/: Application.cpp  Application.hpp  ParcelLoader.cpp  ParcelLoader.hpp  PhaseSwitcher.cpp  PhaseSwitcher.hpp
ProjectTemplates/default/Prj/Lib/: .directory
ProjectTemplates/default/Prj/LibHO/: .directory
Scripts/: README.md  build-urho3d.cmake  fetch-urho3d.cmake
Scripts/cfg/: shmurhogen.props
Scripts/lib/: ShmurhoUtils.pm
Scripts/lib/ShmurhoUtils/: CmdLine.pm  Props.pm
Scripts/lib/ShmurhoUtils/CmdLine/: Option.pm
Shmurho/: CMakeLists.txt
Shmurho/Demo/: CMakeLists.txt
Shmurho/Demo/assets/Data/Materials/: Brick.xml  DesertTiled.xml  Field.xml  Kurt-Space.xml  Paddle.xml  ship.xml
Shmurho/Demo/assets/Data/Objects/: BoxGuy.xml  Brick.xml
Shmurho/Demo/assets/Data/Parcels/: Base.json  Big.json  Common.json  StartMenu.json
Shmurho/Demo/assets/Data/Scenes/: Level.xml  SpaceSkybox-Dev.xml
Shmurho/Demo/assets/Data/Scripts/: Paddle.as
Shmurho/Demo/assets/Data/Textures/Kurt/: Space.xml
Shmurho/Demo/assets/Data/UI/: StartMenuWindow.xml
Shmurho/Demo/src/: main.cpp
Shmurho/Demo/src/Shmurho/Demo/: App.cpp  App.hpp  Bg.cpp  Bg.hpp  DevKbdController.cpp  DevKbdController.hpp  GameState.cpp  GameState.hpp  Loader.cpp  Loader.hpp  LoaderEvents.hpp  LoaderPhase.cpp  LoaderPhase.hpp  ParcelLoader.cpp  ParcelLoader.hpp  PhaseSwitcher.cpp  PhaseSwitcher.hpp  StartMenu.cpp  StartMenu.hpp  StartMenuPhase.cpp  StartMenuPhase.hpp
Shmurho/Loader/: CMakeLists.txt
Shmurho/Loader/src/Shmurho/Loader/: Loader.cpp  Loader.hpp  LoaderEvents.hpp
Shmurho/Parcel/: CMakeLists.txt
Shmurho/Parcel/include/Shmurho/Parcel/: Loader.hpp  Parcel.hpp  ParcelEvents.hpp  ParcelLoader.hpp
Shmurho/Parcel/src/Shmurho/Parcel/: Loader.cpp  Parcel.cpp  ParcelLoader.cpp
Shmurho/Phase/: CMakeLists.txt
Shmurho/Phase/include/Shmurho/Phase/: Partaker.hpp  PhaseEvents.hpp  Switcher.hpp  SwitcherBase.hpp
Shmurho/Phase/src/Shmurho/Phase/: Partaker.hpp  Switcher.cpp  Switcher.hpp  SwitcherBase.cpp  SwitcherBase.hpp
Shmurho/Preload/: CMakeLists.txt
Shmurho/Preload/src/Shmurho/Preload/: Parcel.cpp  Parcel.hpp  PreloadEvents.hpp  Preloader.cpp  Preloader.hpp
Shmurho/Somber/: CMakeLists.txt
Shmurho/Somber/src/: main.cpp
Shmurho/Somber/src/Shmurho/Somber/: App.cpp  App.hpp  GameState.cpp  LocationPhase.hpp  MapLogic.hpp  ParcelLoader.cpp  PhaseSwitcher.cpp  PhaseSwitcher.hpp  PointsAndWaysData.cpp  PointsAndWaysData.hpp  StartMenuPhase.cpp  WorldMapPhase.cpp
